--- a/style.css
+++ b/style.css
@@ -5,101 +5,55 @@
 }
 
 body {
-  margin: 0;
-  background-color: lightgray;
-  min-height: 100vh;
+  background-color: #686de0;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Mono', monospace;
+  min-height: 100vh;
 }
 
-.calculator {
-  height: 390px;
-  width: 250px;
-  background-color:#111;
+.flex {
   display: flex;
+  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  padding: 5px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
-button {
-  width: 50px;
-  height: 50px;
-  border-radius:50%;
-  margin: 5px;
-  font-size: 24px;
-  border: none;
+.timer-container {
+  margin: 20px;
+}
+
+.timer-container h1 {
+  text-align: center;
+}
+
+button{
+  background-color: transparent;
+  padding: 15px;
+  margin: 10px;
+  color: white;
+  font-size: 15px;
+  border-color: white;
   cursor: pointer;
 }
 
-button:active {
-  transform: scale(0.9);
+.actions-wrapper span {
+ font-size: 40px;
+ margin: 0 10px;
 }
 
-button:focus {
-  outline: none;
+.clock-container {
+  border: 2px solid;
+  border-radius: 10px;
+  text-align: center;
+  padding: 10px;
 }
 
-button:hover {
-  opacity: 0.9;
+.clock-container h1{
+  margin: 0;
 }
 
-.display {
-  color: #fff;
-  width: 100%;
-  text-align: right;
-  padding: 20px 10px;
-  font-size: 36px;
-  height: 70px;
-  position: relative;
-}
-
-/* .display small{
-  color: #EE9406;
-  width: 100%;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  font-size: 12px;
-} */
-
-
-
-.nums-container {
-  width: 75%;
-}
-
-.ops-container {
-  width: 25%;
-}
-
-button.orange {
-  background-color: #EE9406;
-  color: #fff
-}
-
-button.dark-gray {
-  background-color: #323232;
-  color: white;
-}
-
-button.light-gray {
-  background-color: #A5A5A5;
-}
-
-button.big-v {
-  height: 110px;
-  border-radius: 50px;
-}
-
-button.big-h {
-  width: 110px;
-  border-radius: 50px;
-}
-
-button.ac {
-  margin-right: 50%;
+.clock-container span{
+  font-size: 60px;
 }
